# article-storage

./: .gitignore  Cargo.toml  Dockerfile  README.md  changelog_message.txt  ci-cd.sh  run.sh  schema.sql  starter.sh  wathcer.sh
db_migration/: migration_1.sql  migration_2.sql
src/: db_manager.rs  dialog.rs  main.rs  parser.rs
