[package]
name = "article-storage"
version = "0.1.0"
authors = ["toterGott <mail@totergott.com>"]
edition = "2018"

[dependencies]
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3", features = ["rt-multi-thread", "macros"] }
regex = "1.5.4"
sqlite = "0.26.0"
